--- a/views/index.mustache
+++ b/views/index.mustache
@@ -29,19 +29,19 @@
     <br>
     <p>
         <a class="btn btn-block btn-social btn-dropbox btn-lg" href="{{ dropboxUrl }}">
-            <span class="fa fa-dropbox"></span> Connect to your Dropbox
+            <span class="fa fa-dropbox"></span> Connect to Dropbox
         </a>
         <a class="btn btn-block btn-social btn-google btn-lg">
-            <span class="fa fa-google"></span> Connect to your Google Drive
+            <span class="fa fa-google"></span> Connect to Google Drive
         </a>
     </p>
     <br>
     <p>
         <a class="btn btn-block btn-social btn-facebook btn-lg">
-            <span class="fa fa-facebook"></span> Connect to your Dropbox
+            <span class="fa fa-facebook"></span> Connect to Facebook 
         </a>
         <a class="btn btn-block btn-social btn-twitter btn-lg">
-            <span class="fa fa-twitter"></span> Connect to your Google Drive
+            <span class="fa fa-twitter"></span> Connect to Twitter
         </a>
     </p>
 </div>
