--- a/views/index.mustache
+++ b/views/index.mustache
@@ -18,12 +18,15 @@
     </div>
     <p class="lead text-center">Configure your pup by scanning the QR code <i class="fa fa-qrcode"></i></p>
     <br>
+    <a class="btn btn-block btn-success btn-lg" href="/wifi">
+        First installation
+    </a>
+    <br>
+    <br>
+    <br>
     <p>
-        <a class="btn btn-block btn-social btn-github btn-lg" href="/wifi">
-            <span class="fa fa-wifi"></span> Configure your Wifi
-        </a>
         <a class="btn btn-block btn-social btn-linkedin btn-lg">
-            <span class="fa fa-envelope-o "></span> Configure your mail
+            <span class="fa fa-envelope-o "></span> Add a new mail address
         </a>
     </p>
     <br>
