--- a/views/wifi.mustache
+++ b/views/wifi.mustache
@@ -13,9 +13,9 @@
 <body>
 <div class="container">
     <div class="page-header">
-        <h1><span class="fa fa-wifi"></span>  Configure your Wifi</h1>
+        <h1><span class="fa fa-wifi"></span> First installation</h1>
     </div>
-    <p class="lead">Enter the name and password of your local Wifi</p>
+    <p class="lead">Enter the name and password of your local Wifi and your mail</p>
     <br>
     <form class="form-horizontal" action="/qr">
         <input type="hidden" name="state" value="wifi">
@@ -29,6 +29,12 @@
             <label for="inputPassword3" class="col-sm-4 control-label">Wifi Password</label>
             <div class="col-sm-8">
                 <input class="form-control" name="password">
+            </div>
+        </div>
+        <div class="form-group">
+            <label for="inputPassword3" class="col-sm-4 control-label">Mail</label>
+            <div class="col-sm-8">
+                <input class="form-control" name="mail">
             </div>
         </div>
         <div class="form-group">
