--- a/views/index.mustache
+++ b/views/index.mustache
@@ -25,6 +25,12 @@
     <br>
     <br>
     <p>
+        <a class="btn btn-block btn-social btn-openid btn-lg" href="{{ googleUrl }}">
+            <span class="fa fa-print "></span> Add a new print
+        </a>
+    </p>
+    <br>
+    <p>
         <a class="btn btn-block btn-social btn-linkedin btn-lg">
             <span class="fa fa-envelope-o "></span> Add a new mail address
         </a>
