--- a/pages/qr.mustache
+++ b/pages/qr.mustache
@@ -8,16 +8,19 @@
     <title>Pupscan</title>
 
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-social/5.1.1/bootstrap-social.min.css">
+    <link rel="stylesheet"
+          href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-social/5.1.1/bootstrap-social.min.css">
 </head>
 <body>
-<div class="container">
+<div class="container text-center">
     <div class="page-header">
-        <h1><span class="fa fa-print"></span> Printers</h1>
+        <h1>Configure your Pupscan</h1>
     </div>
-    <p class="lead">Select your printer</p>
+    <p class="lead">Scan QR code with your pupscan</p>
     <br>
-    <p>{{{ printers }}}</p>
+    <p>
+        <img src="{{ qrcode }}" width="320" height="320"/>
+    </p>
     <br>
     <br>
     <br>
