Implement Wifi and mail configuration

--- a/pages/index.mustache
+++ b/pages/index.mustache
@@ -17,42 +17,46 @@
         <h1>Configure your Pupscan</h1>
     </div>
     <p class="lead text-center">Configure your pup by scanning the QR code <i class="fa fa-qrcode"></i></p>
-    <br>
-    <a class="btn btn-block btn-success btn-lg" href="/wifi">
-        First installation
-    </a>
-    <br>
-    <br>
+    <!--<br>-->
+    <!--<a class="btn btn-block btn-success btn-lg" href="/wifi">-->
+        <!--First installation-->
+    <!--</a>-->
     <br>
     <p>
-        <a class="btn btn-block btn-social btn-openid btn-lg" href="{{ googleUrl }}">
-            <span class="fa fa-print "></span> Add a new print
+        <a class="btn btn-block btn-social btn-openid btn-lg" href="/wifi">
+            <span class="fa fa-wifi "></span> Configure wifi
         </a>
     </p>
     <br>
+    <!--<p>-->
+        <!--<a class="btn btn-block btn-social btn-openid btn-lg" href="{{ googleUrl }}">-->
+            <!--<span class="fa fa-print "></span> Add a new print-->
+        <!--</a>-->
+    <!--</p>-->
+    <!--<br>-->
     <p>
-        <a class="btn btn-block btn-social btn-linkedin btn-lg">
-            <span class="fa fa-envelope-o "></span> Add a new mail address
+        <a class="btn btn-block btn-social btn-linkedin btn-lg" href="/mail">
+            <span class="fa fa-envelope-o "></span> Configure mail address
         </a>
     </p>
-    <br>
-    <p>
-        <a class="btn btn-block btn-social btn-dropbox btn-lg" href="{{ dropboxUrl }}">
-            <span class="fa fa-dropbox"></span> Connect to Dropbox
-        </a>
-        <a class="btn btn-block btn-social btn-google btn-lg">
-            <span class="fa fa-google"></span> Connect to Google Drive
-        </a>
-    </p>
-    <br>
-    <p>
-        <a class="btn btn-block btn-social btn-facebook btn-lg">
-            <span class="fa fa-facebook"></span> Connect to Facebook 
-        </a>
-        <a class="btn btn-block btn-social btn-twitter btn-lg">
-            <span class="fa fa-twitter"></span> Connect to Twitter
-        </a>
-    </p>
+    <!--<br>-->
+    <!--<p>-->
+        <!--<a class="btn btn-block btn-social btn-dropbox btn-lg" href="{{ dropboxUrl }}">-->
+            <!--<span class="fa fa-dropbox"></span> Connect to Dropbox-->
+        <!--</a>-->
+        <!--<a class="btn btn-block btn-social btn-google btn-lg">-->
+            <!--<span class="fa fa-google"></span> Connect to Google Drive-->
+        <!--</a>-->
+    <!--</p>-->
+    <!--<br>-->
+    <!--<p>-->
+        <!--<a class="btn btn-block btn-social btn-facebook btn-lg">-->
+            <!--<span class="fa fa-facebook"></span> Connect to Facebook -->
+        <!--</a>-->
+        <!--<a class="btn btn-block btn-social btn-twitter btn-lg">-->
+            <!--<span class="fa fa-twitter"></span> Connect to Twitter-->
+        <!--</a>-->
+    <!--</p>-->
 </div>
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
