--- a/pages/index.mustache
+++ b/pages/index.mustache
@@ -39,15 +39,15 @@
             <span class="fa fa-envelope-o "></span> Configure mail address
         </a>
     </p>
-    <!--<br>-->
-    <!--<p>-->
-        <!--<a class="btn btn-block btn-social btn-dropbox btn-lg" href="{{ dropboxUrl }}">-->
-            <!--<span class="fa fa-dropbox"></span> Connect to Dropbox-->
-        <!--</a>-->
+    <br>
+    <p>
+        <a class="btn btn-block btn-social btn-dropbox btn-lg" href="{{ dropboxUrl }}">
+            <span class="fa fa-dropbox"></span> Connect to Dropbox
+        </a>
         <!--<a class="btn btn-block btn-social btn-google btn-lg">-->
             <!--<span class="fa fa-google"></span> Connect to Google Drive-->
         <!--</a>-->
-    <!--</p>-->
+    </p>
     <!--<br>-->
     <!--<p>-->
         <!--<a class="btn btn-block btn-social btn-facebook btn-lg">-->
