--- a/pages/index.mustache
+++ b/pages/index.mustache
@@ -41,9 +41,9 @@
     </p>
     <br>
     <p>
-        <a class="btn btn-block btn-social btn-dropbox btn-lg" href="{{ dropboxUrl }}">
-            <span class="fa fa-dropbox"></span> Connect to Dropbox
-        </a>
+        <!--<a class="btn btn-block btn-social btn-dropbox btn-lg" href="{{ dropboxUrl }}">-->
+            <!--<span class="fa fa-dropbox"></span> Connect to Dropbox-->
+        <!--</a>-->
         <!--<a class="btn btn-block btn-social btn-google btn-lg">-->
             <!--<span class="fa fa-google"></span> Connect to Google Drive-->
         <!--</a>-->
